src/test/deca/syntax/invalid/obtained_res/noParReadsynt.res
./src/test/deca/syntax/invalid/created/ReadFloat_Int/noParRead.deca:9:23: extraneous input '10' expecting ')'
